--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div class="notify-section">
                 <p class="notify notify-error">❌ Pin Didn't Match, Please try again</p>
                 <p class="notify notify-success">✅ Pin Matched... Secret door is opening for you</p>
+                <p class="notify notify-try">Sorry. You are out of all of your tries.</p>
             </div>
         </div>
     </div>
